20240225 JDK执行器优化，自动将路径上的符号进行URL编码